# Full-text-search

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  ConfigParser.json  README.md  build_debug.sh  build_release.sh  clean.sh
include/fts/: indexer.hpp  parser.hpp  searcher.hpp  sum.h
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/driver/: CMakeLists.txt  indexcomm.cpp  searchcomm.cpp
src/fts/: CMakeLists.txt  parser.cpp  parser.test.cpp
src/fts/indexer/: CMakeLists.txt  indexer.cpp  indexer.test.cpp
src/fts/parser/: CMakeLists.txt  parser.cpp  parser.test.cpp
src/fts/searcher/: CMakeLists.txt  searcher.cpp  searcher.test.cpp
src/libmath/: CMakeLists.txt  sum.cpp  sum.test.cpp
src/sum-cli/: main.cpp
src/sum-cxxopts/: CMakeLists.txt  main.cpp
